# markdata

./: CMakeLists.txt  README.md  config.json  md_gate_main.cpp  study2.txt
docs/design/gate/: 施工设计稿.md  设计.md
docs/design/trade/: trade侧改造构想.md
docs/review/gate/: review_report.md  review_report_v2.md  review_report_v3_symbol_dir.md
include_external/windows/: TDFAPI.h
src/: header.h  marketdata_payload.h  shm_reader.cpp  shm_reader.h  shm_writer.cpp  shm_writer.h  struct_def.h
